- All DTO & XML have been updated according to server modification

--- a/app/src/main/res/layout/activity_payment_cleared.xml
+++ b/app/src/main/res/layout/activity_payment_cleared.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="vm"
-            type="com.akg.akg_sales.dto.notification.PaymentClearedDto" />
+            type="com.akg.akg_sales.dto.notification.PaymentDto" />
 
         <variable
             name="activity"
