- Cart Operation in Progress

--- a/app/src/main/res/layout/dialog_order_item_qty.xml
+++ b/app/src/main/res/layout/dialog_order_item_qty.xml
@@ -19,7 +19,7 @@
             android:id="@+id/item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{vm.itemName}"
+            android:text="@{vm.itemDto.itemDescription}"
             android:textColor="@color/font_color_main"
             android:textSize="@dimen/text_size_2"
             android:textStyle="bold"
@@ -61,7 +61,7 @@
                 android:id="@+id/uom_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{vm.uom}"
+                android:text="@{vm.itemDto.primaryUom}"
                 android:textSize="@dimen/text_size_1"
                 android:textColor="@color/font_color_main"
                 android:textStyle="bold"
