--- a/app/src/main/res/layout/listitem_cart_item.xml
+++ b/app/src/main/res/layout/listitem_cart_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -42,18 +43,20 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
             android:paddingStart="1sp"
             android:paddingEnd="10sp"
-            android:layout_weight="9">
+            android:layout_weight="9"
+            android:weightSum="10"
+            android:baselineAligned="false">
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
-                >
+                android:layout_weight="6">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -69,47 +72,52 @@
 
             </LinearLayout>
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:weightSum="10">
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_weight="4">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/quantity"
+                        android:inputType="none"
+                        android:focusable="false"
+                        android:layout_width="wrap_content"
+                        android:background="@drawable/white_background"
+                        android:layout_height="wrap_content"
+                        android:text="@{vm.quantity.toString()}"
+                        android:textColor="@color/font_color_main"
+                        android:textStyle="italic"
+                        android:textSize="@dimen/text_size_1"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="15dp"
+                        android:hint="5.0"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textAlignment="center"
+                        android:text="@{vm.itemDto.primaryUom}"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_color_main"
+                        android:textStyle="italic"
+                        android:textSize="@dimen/text_size_1"
+                        android:padding="10dp"
+                        android:hint="CTN"
+                        />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"/>
-                <EditText
-                    android:id="@+id/quantity"
-                    android:inputType="number"
-                    android:layout_width="wrap_content"
-                    android:background="@drawable/white_background"
-                    android:layout_height="wrap_content"
-                    android:text="@{vm.quantity.toString()}"
-                    android:textColor="@color/font_color_main"
-                    android:textStyle="italic"
-                    android:textSize="@dimen/text_size_1"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:hint="5.0"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:textAlignment="center"
-                    android:text="@{vm.itemDto.primaryUom}"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_main"
-                    android:textStyle="italic"
-                    android:textSize="@dimen/text_size_1"
-                    android:padding="10dp"
-                    android:hint="CTN"
-                    />
+                </LinearLayout>
+
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/delete_cart_item"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3">
+                    android:layout_weight="3"
+                    android:padding="10dp">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="45dp"
