--- a/app/src/main/res/layout/dialog_order_filter.xml
+++ b/app/src/main/res/layout/dialog_order_filter.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="vm"
+            type="com.akg.akg_sales.view.dialog.OrderFilterDialog" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,6 +40,10 @@
             android:focusable="false"
             android:hint="Date From">
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/date_from"
+                android:inputType="none"
+                android:focusable="false"
+                android:onClick="@{()->vm.onClickDateFrom()}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -46,6 +57,10 @@
             android:focusable="false"
             android:hint="Date To">
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/date_to"
+                android:inputType="none"
+                android:focusable="false"
+                android:onClick="@{()->vm.onClickDateTo()}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -73,6 +88,7 @@
             android:id="@+id/apply_btn"
             android:background="@drawable/blue_background"
             android:text="Apply Filter"
+            android:onClick="@{()->vm.onClickApplyFilter()}"
             android:layout_margin="40dp"
             android:textSize="@dimen/text_size_1"
             android:textStyle="bold"/>
