--- a/app/src/main/res/layout/dialog_order_filter.xml
+++ b/app/src/main/res/layout/dialog_order_filter.xml
@@ -74,7 +74,7 @@
             android:hint="Order Status">
 
             <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/product_type_dropdown"
+                android:id="@+id/status_dropdown"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="true"
