- General Dialog page created

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -97,6 +97,7 @@
                     android:layout_weight="1"
                     android:padding="15sp"
                     android:layout_margin="10sp"
+                    android:onClick="@{()->vm.onClickDeliveryBtn()}"
                     android:background="@drawable/light_grey_background"
                     >
 
@@ -142,6 +143,7 @@
                     android:layout_weight="1"
                     android:padding="15sp"
                     android:layout_margin="10sp"
+                    android:onClick="@{()->vm.onClickPaymentBtn()}"
                     android:background="@drawable/light_grey_background"
                     >
 
