--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -51,7 +51,8 @@
                 android:id="@+id/filter_cart_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/customer_list_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
@@ -69,10 +70,10 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/cartIcon"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginEnd="35dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/cart"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +90,7 @@
                         android:text="CART"
                         android:textStyle="bold"
                         android:textColor="@color/font_color_main"
-                        android:textSize="@dimen/text_size_2"
+                        android:textSize="@dimen/text_size_1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/cartIcon"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -115,17 +116,17 @@
                         android:text="FILTER"
                         android:textStyle="bold"
                         android:textColor="@color/font_color_main"
-                        android:textSize="@dimen/text_size_2"
+                        android:textSize="@dimen/text_size_1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/filterIcon"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/filterIcon"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="24dp"
+                        android:layout_marginEnd="35dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/filter"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -145,23 +146,23 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/apply_filter_msg_text"
+                app:layout_constraintTop_toBottomOf="@+id/select_item_label"
                 app:layout_constraintWidth_percent="0.95" />
 
             <TextView
-                android:id="@+id/apply_filter_msg_text"
+                android:id="@+id/select_item_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Select Item:"
-                android:textSize="@dimen/text_size_1"
                 android:textColor="@color/font_color_main"
+                android:textSize="@dimen/text_size_1"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/item_listview"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/customer_list_layout" />
+                app:layout_constraintTop_toBottomOf="@+id/filter_cart_container" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -170,13 +171,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginRight="24dp"
-                android:hint="Customer"
-                app:layout_constraintBottom_toTopOf="@+id/apply_filter_msg_text"
+                android:hint="Select Customer"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/filter_cart_container">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                     android:id="@+id/customer_list"
@@ -187,15 +186,36 @@
                     tools:ignore="KeyboardInaccessibleWidget" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/item_search_box"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="(Apply Filter to View Items)"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="@android:drawable/editbox_background"
+                android:drawableEnd="@android:drawable/ic_menu_search"
+                android:ems="10"
+                android:hint="Search Item"
+                android:inputType="textPersonName"
+                android:padding="8dp"
+                android:textAlignment="center"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/item_listview"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/apply_filter_msg_text"
-                app:layout_constraintTop_toBottomOf="@+id/customer_list_layout" />
+                app:layout_constraintStart_toEndOf="@+id/select_item_label"
+                app:layout_constraintTop_toBottomOf="@+id/filter_cart_container" />
+
+            <TextView
+                android:id="@+id/apply_filter_msg_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apply filter to view Item"
+                app:layout_constraintBottom_toTopOf="@+id/item_listview"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/select_item_label"
+                app:layout_constraintTop_toBottomOf="@+id/filter_cart_container"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
