--- a/app/src/main/res/layout/listitem_order_sku.xml
+++ b/app/src/main/res/layout/listitem_order_sku.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/font_color_main"
                 android:textSize="@dimen/text_size_1"
-                android:text="@{index}"
+                android:text="@{index+`.`}"
                 />
         </LinearLayout>
         <LinearLayout
@@ -48,7 +48,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="10">
+                android:weightSum="10"
+                android:visibility="gone">
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -78,14 +79,16 @@
                     android:textSize="@dimen/text_size_1"
                     android:text="Item:"
                     android:textStyle="bold"
-                    android:layout_weight="3"/>
+                    android:layout_weight="3"
+                    android:visibility="gone"/>
                 <TextView
                     android:layout_width="0dp"
                     android:text="@{vm.itemDescription}"
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_color_main"
                     android:textSize="@dimen/text_size_1"
-                    android:layout_weight="7"/>
+                    android:hint="Marks FCMP 500gm"
+                    android:layout_weight="10"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
