--- a/app/src/main/res/layout/listitem_pending_order.xml
+++ b/app/src/main/res/layout/listitem_pending_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -93,22 +94,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="10">
+                android:weightSum="10"
+                android:visibility="gone">
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1"
+                    android:layout_weight="3"
                     android:text="Value:"
-                    android:textStyle="bold"
-                    android:layout_weight="3"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:text="@{vm.value.toString()+` Tk`}"
-                    android:layout_height="wrap_content"
                     android:textColor="@color/font_color_main"
                     android:textSize="@dimen/text_size_1"
-                    android:layout_weight="7"/>
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:text="@{vm.value.toString()+` Tk`}"
+                    android:textColor="@color/font_color_main"
+                    android:textSize="@dimen/text_size_1" />
             </LinearLayout>
 
             <LinearLayout
